syntax = "proto3";
option java_multiple_files = true;
option java_package = "mliot.monitoring.proto";

service MonitorService {
  rpc onStepDetected(StepDetectionMessage) returns (Response) {}
  rpc onProximityDetected(ProximityMessage) returns (Response) {}
  rpc onMotionDetected(MotionDetectionMessage) returns (Response) {}
}

message Response {
  bool is_received = 1;
}

message ProximityMessage {
  float distance = 1;
}

message StepDetectionMessage {
  bool isDetected = 1;
}

message MotionDetectionMessage {
  bool is_detected = 1;
}